--- a/code/x_y_location_forecasting_3的副本.ipynb
+++ b/code/x_y_location_forecasting_3的副本.ipynb
@@ -41,10 +41,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "41db585b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "77\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 1: Data Loading\n",
     "data_df = pd.read_csv('../dataset/insect/ant/location_in_mm.csv')\n",
@@ -53,9 +61,10 @@
     "colony = len(np.unique(data_df[data_df['colony_id'] == colony_id-1][['ant_id']])) + 1\n",
     "data_df = data_df[(data_df['colony_id'] == colony_id) & (data_df['ant_id'] == ant_id)]\n",
     "\n",
-    "ant_num = colony + ant_id\n",
+    "num_ant = colony + ant_id\n",
     "data_df.reset_index(inplace = True)\n",
-    "data = data_df[['location_x', 'location_y']]"
+    "data = data_df[['location_x', 'location_y']]\n",
+    "print(num_ant)"
    ]
   },
   {
