--- a/code/forecasting_evaluation.ipynb
+++ b/code/forecasting_evaluation.ipynb
@@ -19,12 +19,12 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "3c9598c9",
+   "id": "f125a14a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.set_option('Display.max_rows',None)#print all the rows\n",
-    "pd.set_option('Display.max_columns',None)#print all the columns"
+    "pd.set_option('Display.max_rows',None) # print all the rows\n",
+    "pd.set_option('Display.max_columns',None) # print all the columns"
    ]
   },
   {
@@ -35,7 +35,7 @@
    "outputs": [],
    "source": [
     "def pred_data():\n",
-    "    path = \"../dataset/insect/ant/prediction\" #path of objective folder\n",
+    "    path = \"../dataset/insect/ant/predictions\" #path of objective folder\n",
     "    files = os.listdir(path) # get all the files in the folder\n",
     "\n",
     "    if ('.DS_Store' in files):\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "69c48c51",
+   "id": "04f472da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "da17f4d4",
+   "id": "6fd0a8ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "d5296bff",
+   "id": "5fd0f3d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "b751c44d",
+   "id": "0eef8995",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "810d8eb6",
+   "id": "7e77922e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "5289e56e",
+   "id": "baed8548",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,12 +201,21 @@
    "execution_count": 27,
    "id": "7139f507",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n"
+     ]
+    }
+   ],
    "source": [
     "data = pd.read_csv('../dataset/insect/ant/time_series_chamber.csv')\n",
     "data = data[columns_name]\n",
     "true_training = data[int(len(data)*0.5):]\n",
-    "true_testing = data[:int(len(data)*0.5)]"
+    "true_testing = data[:int(len(data)*0.5)]\n",
+    "print(len(columns_name))"
    ]
   },
   {
@@ -222,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "651d75a5",
+   "id": "181c09fa",
    "metadata": {
     "scrolled": true
    },
@@ -241,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "ee6d8367",
+   "id": "9bd9116d",
    "metadata": {},
    "outputs": [
     {
@@ -249,16 +258,16 @@
      "output_type": "stream",
      "text": [
       "Percentage of time when you correctly predict the chamber.\n",
-      "0.9998406862745098\n",
+      "0.9999101713653953\n",
       "-----------\n",
       "Percentage of time when you correctly predict going to another chamber.\n",
-      "0.8444444444444444\n",
+      "0.8820638820638821\n",
       "-----------\n",
-      "recall: 0.9178743961352657\n",
+      "recall: 0.9397905759162304\n",
       "-----------\n",
-      "precision: 0.9134615384615384\n",
+      "precision: 0.9348958333333334\n",
       "-----------\n",
-      "f1-score 0.9156626506024096\n"
+      "f1-score 0.93733681462141\n"
      ]
     }
    ],
@@ -277,24 +286,24 @@
     "print('-----------')\n",
     "\n",
     "# recall=TP/(TP+FN)\n",
-    "recall = recall(y_true_diff, y_pred_diff)\n",
-    "print('recall:', recall)\n",
+    "recl = recall(y_true_diff, y_pred_diff)\n",
+    "print('recall:', recl)\n",
     "print('-----------')\n",
     "\n",
     "# precision=TP/(TP+FP)\n",
-    "precision = precision(y_true_diff, y_pred_diff)\n",
-    "print('precision:', precision)\n",
+    "prec = precision(y_true_diff, y_pred_diff)\n",
+    "print('precision:', prec)\n",
     "print('-----------')\n",
     "\n",
     "# f1 = 2*(precision*recall)/(precision+recall)\n",
-    "f1 = f1_score(precision, recall)\n",
+    "f1 = f1_score(prec, recl)\n",
     "print('f1-score', f1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3c7e0fd",
+   "id": "bb31e7dd",
    "metadata": {},
    "outputs": [],
    "source": []
