--- a/Birds/code/bird_forecasting_evaluation.ipynb
+++ b/Birds/code/bird_forecasting_evaluation.ipynb
@@ -362,7 +362,22 @@
    "id": "d82e4e7c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def map_plot(data, lat_min, lat_max, lon_min, lon_max):\n",
+    "    plt.figure()\n",
+    "    earth = Basemap(llcrnrlon=lon_min, llcrnrlat=lat_min, urcrnrlon=lon_max, urcrnrlat=lat_max)\n",
+    "    earth.drawcountries()\n",
+    "    earth.bluemarble(alpha=0.42)\n",
+    "    earth.drawcoastlines(color='#555566', linewidth=1)\n",
+    "    cm = plt.cm.get_cmap('Accent')\n",
+    "    earth.scatter(data['lon'], data['lat'],c = data['lat'],cmap = 'PuBu')\n",
+    "    plt.xlabel(\"longitude\")\n",
+    "    plt.ylabel(\"latitude\")\n",
+    "    #plt.savefig('../figures/bird/distribution.png', dpi=350)\n",
+    "    plt.show()\n",
+    "    \n",
+    "map_plot(data, lat_min-2, lat_max+2, lon_min-2, lon_max+2)"
+   ]
   },
   {
    "cell_type": "code",
