--- a/Birds/code/bird_forecasting_evaluation.ipynb
+++ b/Birds/code/bird_forecasting_evaluation.ipynb
@@ -80,18 +80,18 @@
    },
    "outputs": [],
    "source": [
-    "y_pred_ARIMA = pd.read_csv('../dataset/radar/pred_ARIMA.csv')\n",
-    "y_pred_log = pd.read_csv('../dataset/radar/pred_log.csv')\n",
-    "y_pred_RF1 = pd.read_csv('../dataset/radar/pred_RF1.csv')\n",
-    "y_pred_RF2 = pd.read_csv('../dataset/radar/pred_RF2.csv')\n",
-    "y_pred_RF3 = pd.read_csv('../dataset/radar/pred_RF3.csv')\n",
-    "y_pred_RF4 = pd.read_csv('../dataset/radar/pred_RF4.csv')\n",
-    "y_pred_RF5 = pd.read_csv('../dataset/radar/pred_RF5.csv')\n",
-    "y_pred_RF6 = pd.read_csv('../dataset/radar/pred_RF6.csv')\n",
-    "y_pred_RF7 = pd.read_csv('../dataset/radar/pred_RF7.csv')\n",
-    "y_pred_RF8 = pd.read_csv('../dataset/radar/pred_RF8.csv')\n",
-    "y_pred_RF9 = pd.read_csv('../dataset/radar/pred_RF9.csv')\n",
-    "data = pd.read_csv('../dataset/radar/time_filled_AR.csv')\n",
+    "y_pred_ARIMA = pd.read_csv('../dataset/pred_ARIMA.csv')\n",
+    "y_pred_log = pd.read_csv('../dataset/pred_log.csv')\n",
+    "y_pred_RF1 = pd.read_csv('../dataset/pred_RF1.csv')\n",
+    "y_pred_RF2 = pd.read_csv('../dataset/pred_RF2.csv')\n",
+    "y_pred_RF3 = pd.read_csv('../dataset/pred_RF3.csv')\n",
+    "y_pred_RF4 = pd.read_csv('../dataset/pred_RF4.csv')\n",
+    "y_pred_RF5 = pd.read_csv('../dataset/pred_RF5.csv')\n",
+    "y_pred_RF6 = pd.read_csv('../dataset/pred_RF6.csv')\n",
+    "y_pred_RF7 = pd.read_csv('../dataset/pred_RF7.csv')\n",
+    "y_pred_RF8 = pd.read_csv('../dataset/pred_RF8.csv')\n",
+    "y_pred_RF9 = pd.read_csv('../dataset/pred_RF9.csv')\n",
+    "data = pd.read_csv('../dataset/time_filled_AR.csv')\n",
     "data = data.drop(['samplingperiod'], axis = 1)\n",
     "\n",
     "y_pred_ARIMA = y_pred_ARIMA[data.columns]\n",
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a02ea84c",
+   "id": "3a6cd1f3",
    "metadata": {},
    "source": [
     "# R2 plot"
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "b8b0b91a",
+   "id": "2e339209",
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "703013a5",
+   "id": "c87f2fbb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "b4286ef4",
+   "id": "584353ff",
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12ff8e15",
+   "id": "78406dc8",
    "metadata": {},
    "outputs": [],
    "source": []
