--- a/Birds/code/configuration_file.ipynb
+++ b/Birds/code/configuration_file.ipynb
@@ -45,42 +45,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "id": "c69e1798",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3,\n",
-       " 100,\n",
-       "     radar_id n_estimators\n",
-       " 0       KABR           50\n",
-       " 1       KABX          100\n",
-       " 2       KAKQ           90\n",
-       " 3       KAMA           70\n",
-       " 4       KAMX           80\n",
-       " ..       ...          ...\n",
-       " 114     KRGX           80\n",
-       " 115     KABX          120\n",
-       " 116     KARX          100\n",
-       " 117     KBIS          100\n",
-       " 118     KBUF          120\n",
-       " \n",
-       " [119 rows x 2 columns])"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ReadJson('config.json')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 79,
    "id": "f3b7722d",
    "metadata": {},
@@ -89,7 +53,8 @@
     "radars = pd.read_csv('../dataset/radar.csv').values.reshape(1, -1)\n",
     "radars = radars[0]\n",
     "result = pd.read_csv('../dataset/result_mean_estimator.csv')\n",
-    "WriteJson('config.json', result, radars)"
+    "WriteJson('config.json', result, radars)\n",
+    "ReadJson('config.json')"
    ]
   },
   {
