--- a/Birds/code/configuration_file.ipynb
+++ b/Birds/code/configuration_file.ipynb
@@ -33,12 +33,13 @@
     "            i += 1\n",
     "    return lags, random_state, df\n",
     "    \n",
+    "# Generate the configuration file with best performance parameters\n",
     "def WriteJson(JsonFile, data, radars):\n",
     "    with open(JsonFile,'w',encoding = 'GBK') as f1:\n",
     "        str1 = {'lags':str(3), 'random_state':str(100)}\n",
     "        f1.writelines(json.dumps(str1, ensure_ascii=False)+'\\n')\n",
     "        for i in range(len(data)):\n",
-    "            str1 ={'radar':data.iloc[i,0], 'n_estimators':str(data.iloc[i,4])}\n",
+    "            str1 ={'radar':data.iloc[i,0], 'n_estimators':str(data.iloc[i,4]), 'max_depth': str(data.iloc[i,5])}\n",
     "                   #'max_depth':str(data.loc(radar, 'max_depth'))}\n",
     "            f1.writelines(json.dumps(str1, ensure_ascii=False)+'\\n')"
    ]
@@ -52,7 +53,7 @@
    "source": [
     "radars = pd.read_csv('../dataset/radar.csv').values.reshape(1, -1)\n",
     "radars = radars[0]\n",
-    "result = pd.read_csv('../dataset/result_mean_estimator.csv')\n",
+    "result = pd.read_csv('../dataset/result_mean_depth.csv')\n",
     "WriteJson('config.json', result, radars)\n",
     "ReadJson('config.json')"
    ]
