--- a/Birds/code/bird_data_processing.ipynb
+++ b/Birds/code/bird_data_processing.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 5,
    "id": "7ef0b730",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
     "    earth.scatter(data['lon'], data['lat'], c = data.iloc[:,2], cmap = 'rainbow')\n",
     "    plt.xlabel(\"longitude\")\n",
     "    plt.ylabel(\"latitude\")\n",
-    "    plt.savefig('../figures/%s.png'%name, dpi=350)\n",
+    "    plt.savefig('../figures/%s.png'%name, dpi=350, bbox_inches='tight')\n",
     "    plt.show()\n",
     "    \n",
     "def line_plot(data, name):\n",
@@ -1519,7 +1519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 6,
    "id": "cbf9386b",
    "metadata": {},
    "outputs": [],
@@ -1531,7 +1531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 7,
    "id": "0172902b",
    "metadata": {},
    "outputs": [
@@ -1570,7 +1570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 8,
    "id": "79bc065a",
    "metadata": {},
    "outputs": [
@@ -1588,6 +1588,14 @@
    "source": [
     "map_plot(data, lat_min-2, lat_max+2, lon_min-2, lon_max+2, 'distribution')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c97b0888",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
