--- a/Birds/code/configuration_file.ipynb
+++ b/Birds/code/configuration_file.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "6c99c372",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 4,
    "id": "534a73f9",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,9 @@
     "                lags = int(data['lags'])\n",
     "                random_state = int(data['random_state'])\n",
     "            else:\n",
-    "                df = df.append(pd.DataFrame({'radar_id':[data['radar']],'n_estimators':[int(data['n_estimators'])]}),\n",
+    "                df = df.append(pd.DataFrame({'radar_id':[data['radar']],\n",
+    "                                             'n_estimators':[int(data['n_estimators'])], \n",
+    "                                             'max_depth':[int(data['max_depth'])]}),\n",
     "                                   ignore_index = True)\n",
     "            i += 1\n",
     "    return lags, random_state, df\n",
@@ -46,10 +48,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 5,
    "id": "f3b7722d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3,\n",
+       " 100,\n",
+       "     radar_id n_estimators  max_depth\n",
+       " 0       KABR           30       16.0\n",
+       " 1       KABX           50       14.0\n",
+       " 2       KAKQ           90       13.0\n",
+       " 3       KAMA          100       17.0\n",
+       " 4       KAMX           50       15.0\n",
+       " ..       ...          ...        ...\n",
+       " 130     KUEX           70       19.0\n",
+       " 131     KVNX           50       13.0\n",
+       " 132     KVTX           60       13.0\n",
+       " 133     KVWX           30       11.0\n",
+       " 134     KYUX           90       12.0\n",
+       " \n",
+       " [135 rows x 3 columns])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "radars = pd.read_csv('../dataset/radar.csv').values.reshape(1, -1)\n",
     "radars = radars[0]\n",
