ant code updated

--- a/Ants/code/ant_forecasting_evaluation.ipynb
+++ b/Ants/code/ant_forecasting_evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 49,
    "id": "4228e247",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 50,
    "id": "f125a14a",
    "metadata": {},
    "outputs": [],
@@ -29,13 +29,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 51,
    "id": "58b99240",
    "metadata": {},
    "outputs": [],
    "source": [
     "def pred_data():\n",
-    "    path = \"../dataset/insect/ant/prediction\" #path of objective folder\n",
+    "    path = \"../dataset/prediction_ARIMA/\" #path of objective folder\n",
     "    files = os.listdir(path) # get all the files in the folder\n",
     "\n",
     "    if ('.DS_Store' in files):\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 52,
    "id": "b87ed4a2",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 53,
    "id": "04f472da",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 54,
    "id": "6fd0a8ed",
    "metadata": {},
    "outputs": [],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 55,
    "id": "5fd0f3d1",
    "metadata": {},
    "outputs": [],
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 56,
    "id": "0eef8995",
    "metadata": {},
    "outputs": [],
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 57,
    "id": "7e77922e",
    "metadata": {},
    "outputs": [],
@@ -175,20 +175,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "4b39cbf3",
+   "execution_count": 62,
+   "id": "9bd9116d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pred, columns_name = pred_data()\n",
-    "pred.to_csv('../dataset/insect/ant/prediction.csv')\n",
-    "pred_training = pred[int(len(pred)*0.5):]\n",
-    "pred_testing = pred[:int(len(pred)*0.5)]"
+    "def evaluation(true_testing, pred_testing, y_true_diff, y_pred_diff, y_true, y_pred):\n",
+    "    y_true_diff = differentiation(true_testing)\n",
+    "    y_pred_diff = differentiation(pred_testing)\n",
+    "    #y_pred_diff.to_csv('../dataset/prediction_diff.csv')\n",
+    "    #y_true_diff.to_csv('../dataset/true_diff.csv')\n",
+    "\n",
+    "    y_true_diff = matrix_to_1d(y_true_diff)\n",
+    "    y_pred_diff = matrix_to_1d(y_pred_diff)\n",
+    "    y_pred_diff = y_pred_diff.astype(int)\n",
+    "\n",
+    "    # Accuracy = (TP+TN)/(TP+FP+TN+FN)\n",
+    "    # Percentage of time when you correctly predict the chamber.\n",
+    "    from sklearn.metrics import accuracy_score\n",
+    "    print('Percentage of time when you correctly predict the chamber.')\n",
+    "    print(accuracy_score(y_true, y_pred))\n",
+    "    print('-----------')\n",
+    "\n",
+    "    # Percentage of time when you correctly predict going to another chamber.\n",
+    "    acc_change = accuracy_change(y_true_diff, y_pred_diff)\n",
+    "    print('Percentage of time when you correctly predict going to another chamber.')\n",
+    "    print(acc_change)\n",
+    "    print('-----------')\n",
+    "\n",
+    "    # recall=TP/(TP+FN)\n",
+    "    recl = recall(y_true_diff, y_pred_diff)\n",
+    "    print('recall:', recl)\n",
+    "    print('-----------')\n",
+    "\n",
+    "    # precision=TP/(TP+FP)\n",
+    "    prec = precision(y_true_diff, y_pred_diff)\n",
+    "    print('precision:', prec)\n",
+    "    print('-----------')\n",
+    "\n",
+    "    # f1 = 2*(precision*recall)/(precision+recall)\n",
+    "    f1 = f1_score(prec, recl)\n",
+    "    print('f1-score', f1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33ce2d82",
+   "metadata": {},
+   "source": [
+    "### ARIMA"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 63,
+   "id": "4b39cbf3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1440\n"
+     ]
+    }
+   ],
+   "source": [
+    "pred, columns_name = pred_data()\n",
+    "pred.to_csv('../dataset/pred_ARIMA.csv')\n",
+    "pred_training = pred[int(len(pred)*0.5):]\n",
+    "pred_testing = pred[:int(len(pred)*0.5)]\n",
+    "print(len(pred_testing))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "id": "baed8548",
    "metadata": {},
    "outputs": [],
@@ -198,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 65,
    "id": "7139f507",
    "metadata": {},
    "outputs": [
@@ -206,21 +268,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "191\n"
+      "1440\n"
      ]
     }
    ],
    "source": [
-    "data = pd.read_csv('../dataset/insect/ant/time_series_chamber.csv')\n",
+    "data = pd.read_csv('../dataset/time_series_chamber.csv')\n",
     "data = data[columns_name]\n",
     "true_training = data[int(len(data)*0.5):]\n",
     "true_testing = data[:int(len(data)*0.5)]\n",
-    "print(len(columns_name))"
+    "print(len(true_testing))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 66,
    "id": "0ee4f0d9",
    "metadata": {},
    "outputs": [],
@@ -230,27 +292,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 67,
    "id": "181c09fa",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percentage of time when you correctly predict the chamber.\n",
+      "0.9999852871939736\n",
+      "-----------\n",
+      "Percentage of time when you correctly predict going to another chamber.\n",
+      "0.9798387096774194\n",
+      "-----------\n",
+      "recall: 0.9898167006109979\n",
+      "-----------\n",
+      "precision: 0.9898167006109979\n",
+      "-----------\n",
+      "f1-score 0.9898167006109979\n"
+     ]
+    }
+   ],
    "source": [
-    "y_true_diff = differentiation(true_testing)\n",
-    "y_pred_diff = differentiation(pred_testing)\n",
-    "y_pred_diff.to_csv('../dataset/insect/ant/prediction_diff.csv')\n",
-    "y_true_diff.to_csv('../dataset/insect/ant/true_diff.csv')\n",
-    "\n",
-    "y_true_diff = matrix_to_1d(y_true_diff)\n",
-    "y_pred_diff = matrix_to_1d(y_pred_diff)\n",
-    "y_pred_diff = y_pred_diff.astype(int)"
+    "evaluation(true_testing, pred_testing, y_true_diff, y_pred_diff, y_true, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84744fb1",
+   "metadata": {},
+   "source": [
+    "### VARMA loop"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "9bd9116d",
+   "execution_count": 68,
+   "id": "bb31e7dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred = pd.read_csv('../dataset/pred_VARMA_noloop.csv')\n",
+    "pred_training = pred[int(len(pred)*0.5):]\n",
+    "pred_testing = pred[:int(len(pred)*0.5)]\n",
+    "y_pred = matrix_to_1d(pred_testing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "c61ac421",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns_name = pred.columns.values.tolist()\n",
+    "data = pd.read_csv('../dataset/time_series_chamber.csv')\n",
+    "data = data[columns_name]\n",
+    "true_training = data[int(len(data)*0.5):]\n",
+    "true_testing = data[:int(len(data)*0.5)]\n",
+    "y_true = matrix_to_1d(true_testing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "08ad53a6",
    "metadata": {},
    "outputs": [
     {
@@ -258,52 +367,27 @@
      "output_type": "stream",
      "text": [
       "Percentage of time when you correctly predict the chamber.\n",
-      "0.9998480902777778\n",
+      "0.9998681434599156\n",
       "-----------\n",
       "Percentage of time when you correctly predict going to another chamber.\n",
-      "0.8445378151260504\n",
+      "0.8504672897196262\n",
       "-----------\n",
-      "recall: 0.9178082191780822\n",
+      "recall: 0.9210526315789473\n",
       "-----------\n",
-      "precision: 0.9136363636363637\n",
+      "precision: 0.9173387096774194\n",
       "-----------\n",
-      "f1-score 0.9157175398633258\n"
+      "f1-score 0.9191919191919191\n"
      ]
     }
    ],
    "source": [
-    "# Accuracy = (TP+TN)/(TP+FP+TN+FN)\n",
-    "# Percentage of time when you correctly predict the chamber.\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "print('Percentage of time when you correctly predict the chamber.')\n",
-    "print(accuracy_score(y_true, y_pred))\n",
-    "print('-----------')\n",
-    "\n",
-    "# Percentage of time when you correctly predict going to another chamber.\n",
-    "acc_change = accuracy_change(y_true_diff, y_pred_diff)\n",
-    "print('Percentage of time when you correctly predict going to another chamber.')\n",
-    "print(acc_change)\n",
-    "print('-----------')\n",
-    "\n",
-    "# recall=TP/(TP+FN)\n",
-    "recl = recall(y_true_diff, y_pred_diff)\n",
-    "print('recall:', recl)\n",
-    "print('-----------')\n",
-    "\n",
-    "# precision=TP/(TP+FP)\n",
-    "prec = precision(y_true_diff, y_pred_diff)\n",
-    "print('precision:', prec)\n",
-    "print('-----------')\n",
-    "\n",
-    "# f1 = 2*(precision*recall)/(precision+recall)\n",
-    "f1 = f1_score(prec, recl)\n",
-    "print('f1-score', f1)"
+    "evaluation(true_testing, pred_testing, y_true_diff, y_pred_diff, y_true, y_pred)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb31e7dd",
+   "id": "c607dfcc",
    "metadata": {},
    "outputs": [],
    "source": []
